Fix webpage overflow scrolling
Remove horizontal scrolling and limited deadspace at bottom of webpage.

--- a/style.css
+++ b/style.css
@@ -27,11 +27,15 @@ ul {
     list-style: none;
 }
 
+body {
+    width: 100%;
+}
+
 .grid-container {
     display: grid;
     grid-template: 200px 1fr / 300px 1fr;
     min-height: 100vh;
-    width: 100vw;
+    overflow: hidden;
 }
 
 
@@ -192,7 +196,7 @@ ul {
     grid-row: 2 / 3;
 
     display: grid;
-    grid-template: 1fr 1fr / 4fr 1fr;
+    grid-template: auto auto / 4fr 1fr;
     background-color: var(--green-3);
     padding: 2rem var(--dist-between-items);
     gap: var(--dist-between-items);
